# beehiiv-automation

./: .env.staging  .gitignore  Flask.py  PROJECT_STRUCTURE.md  beehiiv.py  celery_app.py  celery_worker.py  config.py  content_extraction.py  content_generation.py  discord_bot.py  discord_bot_tutorial.py  dump.rdb  generate_test_jwt.py  index.py  inspect_beehiiv.py  linkedin.py  linkedin_redirect.html  main.py  manage_db.py  outreach_image_generator.py  pyproject.toml  requirements.txt  requirements_full.txt  run.py  run_discord_bot.py  run_staging_bot.py  tasks.py  test_.py  testflask.py  twitter.py  user_config.db  user_config.enc  user_config.json  vercel.json  worker.py
.vercel/: project.json
airflow/: airflow.cfg  airflow.db
airflow/dags/: postonce_dag.py
api/: get_token.py  handler.py  index.py  main.py  real_main.py  requirements.txt
api/.vercel/: project.json
cli/: main.py
config/: environment.py  user_config.py
content/: beehiiv_content.py  content_fetcher.py  generate_tweets.py  html_utils.py  openai_client.py  text_utils.py
core/: constants.py  main_process.py  user_config.enc
core/auth/: stack_auth_client.py  supabase_auth.py
core/config/: environment.py  feature_toggle.py  feature_toggles.json  init_storage.py  (+2 more)
discord_functionality/: discord_bot.py  discord_commands_handler.py  discord_events_handler.py  discord_utils.py
docs/: API.md  CONFIGURATION.md  ENVIRONMENT_SETUP.md  LLM_PIPELINE.md  README.md
encryption/: encryption.py
js_utils/: twitter_text_util.js
stack-auth-nextjs/: .env.local
tests/: mocks.py  test_api.py
(+76 files in other folders)
