[tool.poetry]
name = "beehiiv-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.6.0"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
pyjwt = "^2.9.0"
beautifulsoup4 = "^4.12.3"
anthropic = "^0.32.0"
openai = "^1.39.0"
cryptography = "^43.0.0"
requests-oauthlib = "^2.0.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
